@@ -1,3 +1,8 @@
+2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* users-conf.in: unfuck groups stuff in profiles, more concretely
+	make it safe the new info sucessfully
+
 2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.1.4
